# SAM3D-OpenSim

./: .gitignore  AGENTS.md  CLAUDE.md  Config.toml  DOCUMENTATION.md  HOW_TO_RUN.md  README.md  SETUP.md  index.html  pyproject.toml  requirements.txt  run_export.py  run_full_pipeline.py  run_inference.py  run_pipeline.py  server.py  test_imports.py
config/: AGENTS.md  config.yaml  marker_mapping.yaml
docs/: AGENTS.md  FULL_DOCUMENTATION.md
models/: AGENTS.md  Markers_MHR70.xml
sam3d_opensim/: __init__.py  batch.py  cli.py  config.py
scripts/: AGENTS.md  export_fbx_blender.py  export_fbx_skely.py  export_fbx_skely_quat.py
src/: AGENTS.md  __init__.py  blender_export.py  coordinate_transform.py  export_graphs.py  export_stage.py  inference_stage.py  keypoint_converter.py  mesh_visualization.py  moge_scene_ground.py  opensim_ik.py  opensim_marker_spec.py  pipeline_artifacts.py  pipeline_runner.py  pipeline_runtime_common.py  pose2sim_adapter.py  pose2sim_augmentation_runner.py  pose2sim_workspace.py  post_ik_foot_snap.py  post_processing.py  sam3d_inference.py  sam3d_mesh_renderer.py  subprocess_pipeline_runner.py  trc_exporter.py
tests/: test_batch_cli.py  test_config_cli.py  test_export_graphs.py  test_export_stage_ik_backend.py  test_export_stage_save_graph.py  test_ik_backend_cli.py  test_ik_backend_plumbing.py  test_mesh_cli.py  test_mesh_plumbing.py  test_mesh_visualization.py  test_mesh_visualization_pass.py  test_pose2sim_workspace.py  test_post_ik_foot_snap_aliases.py  test_runtime_ik_upper_limb.py  test_save_graph_cli.py  test_save_graph_plumbing.py  (+5 more)
(+8 files in other folders)
